# Evaluating-the-cost-effectiveness-of-Heterogeneous-Edge-Platforms-for-Neural-Network-Workloads

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  MIGRATION_AND_COMPLETION_SUMMARY.md  README.md  SETUP.md  pyproject.toml  requirements.txt
1_roofline_analysis/: README.md  hardware_specs.py  operational_intensity.py  plot_roofline.py  roofline_model.py
2_benchmark_harness/: benchmark_runner.py  imagenet_loader.py  model_configs.py  platform_configs.py
3_metrics/: README.md  edcp.py  energy_meter.py  inference_time.py  temperature_monitor.py  total_time.py
4_sw_framework_comparison/: framework_runner.py  quantization_analysis.py
6_application_case_study/: demo.py  heterogeneous_scheduler.py  traffic_density.py  vehicle_detector.py
docs/: architecture.md  case_study.md  concurrency_and_workload_allocation.md  coverage_matrix.md  edcp.md  hardware_matrix.md  internal_inventory.md  limitations_and_future_work.md  methodology.md  metrics.md  overview.md  paper_to_repo_map.md  reproducibility.md  runtime_matrix.md  skill_showcase.md
examples/: compare_two_devices.py  quickstart_cpu.py  quickstart_gpu.py  quickstart_npu_vpu.py  runtime_selection_demo.py
scripts/: collect_system_info.py  compare_devices.py  compare_runtimes.py  compute_edcp.py  generate_reports.py  profile_power_temperature.py  run_benchmark.py  run_concurrency_experiments.py
src/: __init__.py
tests/: test_config_loading.py  test_edcp.py  test_metrics.py  test_reporting.py
visualizations/: fig10_dwa_vim3.py  fig11_edcp.py  fig12_app_workflow.py  fig1_roofline.py  fig2_inference_time.py  (+8 more)
(+41 files in other folders)
