[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bang-for-the-buck-edge-benchmarking"
version = "0.1.0"
description = "Capability-first edge AI benchmarking and cost-effectiveness toolkit"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
