[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heterogeneous-edge-ml-benchmarks"
version = "0.1.0"
description = "Evaluating the Cost-Effectiveness of Heterogeneous Edge Platforms for Neural Network Workloads"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pytest.ini_options]
testpaths = ["tests"]
